who we are remove click on name text, aligned email to container, fixed margin spacing

--- a/themes/yoga_outreach/sass/_whoweare.scss
+++ b/themes/yoga_outreach/sass/_whoweare.scss
@@ -79,7 +79,7 @@
                     margin:0 auto;
                     color:#4A4A4A;
                     text-transform:uppercase;
-                    font-weight:100;
+                    font-weight: bold;
                     margin-top:60px
                 }
         }
@@ -102,7 +102,7 @@
         align-items: center;
             @include desktop{
                 width: 30%;
-                margin-top:40px;
+                margin: 40px 17px;
             }
         .staffphoto {
             width: 160px;
@@ -240,7 +240,7 @@
         height: fit-content;
         width: 90%;
         @include desktop{
-            width: 80%;
+            width: 100%;
         }
     }
 }
